--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,38 @@
     font-family: 'Cairo', sans-serif;
 }
 
+/* NavBar Started */
+.navbar {
+    background-color: white;
+    padding: 13px;
+}
+
+.navbar span{
+    
+    float: right;
+}
+
+.navbar span i{
+    padding-right: 20px;
+}
+
+input[type="text"] {
+    padding: 10px;
+    width: 350px;
+    border-radius: 20px 20px 20px 20px;
+    border: 0px;
+    background-color: #ebeff9;
+    height: 40px;
+}
+
+.navbar button{
+    padding: 10px;
+    border-radius: 0px 20px 20px 0px;
+}
+/* NavBar Ended */
+
+
+/* SideBar Started*/
 .sidebar {
     background-color: #333;
     color: white;
@@ -17,7 +49,7 @@
 .fa-solid, .fas {
     font-family: "Font Awesome 6 Free";
     font-weight: 900;
-    padding-right: 5px;
+    padding-right: 7px;
 }
 
 
@@ -30,6 +62,7 @@
     list-style: none;
     font-size: 15px;
     padding-top: 40px;
+    color: white;
 }
 
 
@@ -38,15 +71,12 @@
 }
 
 .content {
-    background-color: #eee;
+    background-color: #ebeff9;
     flex-grow: 1;
 }
+/* SideBar Started*/
 
-/* NavBar */
-.navbar {
-    background-color: white;
-    padding: 10px;
-}
+
 
 
 /* Cards */
@@ -82,7 +112,6 @@
     color: black;
     margin-bottom: 5px;
 }
-
 /* Cards Ended*/
 
 
