--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,19 @@ input[type="text"] {
     background-color: #ebeff9;
     height: 40px;
 }
+.admin{
 
-.navbar button{
+    text-align: center;
+
+    padding: 17.5px;
+    border-bottom: 0.5px solid;
+}
+/* padding-bottom: 34px; */
+
+/* .navbar button{
     padding: 10px;
     border-radius: 0px 20px 20px 0px;
-}
+} */
 /* NavBar Ended */
 
 
