--- a/registration/sign.css
+++ b/registration/sign.css
@@ -19,10 +19,44 @@ body {
     background-color: white;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0);
     border-radius: 10px;
+    overflow: hidden;
+}
+
+.container .forms {
+    display: flex;
+    align-items: center;
+    height: 440px;
+    width: 200%;
+    /* background-color: red; */
+    transition: height 0.2s ease;
+}
+
+
+.container.active .forms {
+    height: 600px;
 }
 
 .container .form {
+    width: 50%;
     padding: 30px;
+    background-color: #fff;
+    transition: margin-left 0.18s ease;
+}
+
+.container.active .login {
+    margin-left: -50%;
+    opacity: 0;
+    transition: margin-left 0.18s ease, opacity 0.15s ease;
+}
+
+.container .signup {
+    opacity: 0;
+    transition: opacity 0.09s ease;
+}
+
+.container.active .signup {
+    opacity: 1;
+    transition: opacity 0.2s ease;
 }
 
 .container .form .title {
@@ -58,7 +92,7 @@ body {
     border: none;
     font-size: 16px;
     outline: none;
-    border-bottom: 0.5px solid #ccc;
+    border-bottom: 1px solid #ccc;
     border-top: 0.5px solid transparent;
     transition: all 0.2s ease;
 }
@@ -73,6 +107,7 @@ body {
     transform: translateY(-50%);
     font-size: 23px;
     transition: all 0.2s ease;
+    color: #265df2;
 }
 
 .input-field i.icon {
