--- a/registration/forgetpassword.css
+++ b/registration/forgetpassword.css
@@ -12,11 +12,11 @@
     background-color: #FFFFFF;
     height: 56px;
     display: flex;
-    box-shadow: 1px 1px 1px 1px rgb(86 86 86 / 20%);
+    box-shadow: -1px 0px 3px 0px rgb(86 86 86 / 20%);
     padding: 10px;
 }
-.input placeholder{
-   color:red;
+svg.Layer_1{
+    height: 46px;
 }
 .logo{
     padding: 10px;
@@ -29,7 +29,7 @@ input[type="password"]
     height: 40px;
     padding: 10px;
     font-size: 15px;
-    font-weight: 600;
+    font-weight: 200;
     width: 188px;
     border-radius: 6px;
     border: 1px solid rgb(193 195 198);
@@ -51,3 +51,68 @@ a{
     font-weight: 100;
     padding-right: 25px;
 }
+
+  ::placeholder{
+      color: rgb(138, 141, 145);
+  }
+
+
+
+
+
+
+
+  /* body*/
+  .body{
+    background: white;
+    height: 300px;
+    max-width: 500px;
+    margin: 0 auto;
+    border-radius: 6px;
+    margin-top: 90px;
+  }
+
+  .body h1{
+    padding: 10px;
+    font-size: 20px;
+    padding: 20px;
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+  }
+
+  h3{
+    padding: 19px;
+    font-weight: 100;
+  }
+
+  .body input{
+    border-radius: 6px;
+    color: #8a8d91;
+    font-family: Roboto-Regular, Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    height: auto;
+    padding: 16px 0 16px 16px;
+    width: 92%;
+    margin-left: 4%;
+    margin-bottom: 25px;
+  }
+  
+.body-btn{
+    display: flex;
+    padding: 15px;
+    justify-content: flex-end;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+}
+
+  .body-btn button{
+    width: 105px;
+    margin: 5px;
+  }
+
+  .body-btn .cancel{
+      background-color: rgb(232, 235, 238);
+      color: rgb(75, 79, 85);
+  }
+
+  /* .hr{
+      margin-top: 10px;
+  } */
