--- a/registration/forgetpassword.css
+++ b/registration/forgetpassword.css
@@ -13,7 +13,7 @@
     height: 56px;
     display: flex;
     box-shadow: -1px 0px 3px 0px rgb(86 86 86 / 20%);
-    padding: 10px;
+    padding: 8px 12px 10px;
 }
 svg.Layer_1{
     height: 46px;
@@ -27,13 +27,17 @@ input[type="text"],
 input[type="password"]
 {
     height: 40px;
-    padding: 10px;
+    padding: 8px 12px 10px;
     font-size: 15px;
     font-weight: 200;
     width: 188px;
     border-radius: 6px;
     border: 1px solid rgb(193 195 198);
     padding-right: 25px;
+}
+input[type="text"]:focus, 
+input[type="password"]:focus{
+  outline: none;
 }
 
 button{
@@ -44,12 +48,14 @@ button{
     font-size: initial;
     border: 1px;
     border-radius: 6px;
+    margin: 0px 7px 0px 2px;
 }
 a{
     text-decoration: none;
     color: rgb(34, 110, 219);
     font-weight: 100;
     padding-right: 25px;
+    font-size: 14px;
 }
 
   ::placeholder{
@@ -65,7 +71,7 @@ a{
   /* body*/
   .body{
     background: white;
-    height: 300px;
+    height: 290px;
     max-width: 500px;
     margin: 0 auto;
     border-radius: 6px;
@@ -73,9 +79,8 @@ a{
   }
 
   .body h1{
-    padding: 10px;
     font-size: 20px;
-    padding: 20px;
+    padding: 18px 16px 18px 18px;
     border-bottom: 1px solid rgba(0, 0, 0, .1);
   }
 
@@ -104,8 +109,9 @@ a{
 }
 
   .body-btn button{
-    width: 105px;
+    width: 95px;
     margin: 5px;
+    height: 36px;
   }
 
   .body-btn .cancel{
