--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,19 @@
 .navbar {
     background-color: white;
     padding: 13px;
+    display: flex;
+    align-items: center;
 }
-
+a{
+    padding-right: 25px;
+    text-decoration: none;
+}
 .navbar span{
-    
-    float: right;
+    margin-left: auto;
 }
 
 .navbar span i{
-    padding-right: 20px;
+    padding-right: 25px;
 }
 
 input[type="text"] {
@@ -33,18 +37,11 @@ input[type="text"] {
     height: 40px;
 }
 .admin{
-
     text-align: center;
-
     padding: 17.5px;
     border-bottom: 0.5px solid;
 }
-/* padding-bottom: 34px; */
 
-/* .navbar button{
-    padding: 10px;
-    border-radius: 0px 20px 20px 0px;
-} */
 /* NavBar Ended */
 
 
