--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,13 @@ input[type="text"] {
     background-color: #ebeff9;
     height: 40px;
 }
+
+
+input[type="text"]:focus{
+    outline: none;
+}
+
+
 .admin{
     text-align: center;
     padding: 17.5px;
@@ -47,14 +54,16 @@ input[type="text"] {
 
 /* SideBar Started*/
 .sidebar {
-    background-color: #333;
+    background-color: black;
     color: white;
     width: 250px;
 }
+
+
 .fa-solid, .fas {
     font-family: "Font Awesome 6 Free";
     font-weight: 900;
-    padding-right: 7px;
+  padding: 10px;
 }
 
 
@@ -89,6 +98,10 @@ input[type="text"] {
     margin: 0 0 10px;
 }
 
+area.cards ul li{
+    background-color: yellow;
+}
+
 .cards ul {
     margin: 0;
     padding: 0;
@@ -111,11 +124,24 @@ input[type="text"] {
     border-radius: 3px;
 }
 
+.cards ul li.items{
+    background-image: linear-gradient(45deg, #f93a5a, #f7778c)
+}
+
+.cards ul li.countries{
+
+    background-image: linear-gradient(to left, #48d6a8 0%, #029666 100%) !important;
+}
+.cards ul li.orders{
+
+    background-image: linear-gradient(to left, #efa65f, #f76a2d) !important;
+}
+
+
 .cards ul li span {
     display: block;
     font-size: 40px;
     font-weight: bold;
-    /* color: black; */
     margin-bottom: 5px;
 }
 
@@ -135,14 +161,13 @@ input[type="text"] {
 }
 
 .area table thead td {
-    background-color: rgb(65, 146, 106);
+    background-color: black;
     color: white;
     text-align: center;
     font-weight: bold;
 }
 
 .area table tbody td {
-    /* background-color: #f7f7f7; */
     text-align: center;
     background-color: white;
 }
