--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a{
 .navbar span i{
     padding-right: 25px;
 }
-
+/* 
 input[type="text"] {
     padding: 10px;
     width: 350px;
@@ -40,7 +40,7 @@ input[type="text"] {
 
 input[type="text"]:focus{
     outline: none;
-}
+} */
 
 
 .admin{
@@ -101,8 +101,9 @@ input[type="text"]:focus{
     margin: 0 0 10px;
 }
 
-area.cards ul li{
-    background-color: yellow;
+.cards ul li:hover{
+ /* transform: scale(1.05); */
+ top: +10px;
 }
 
 .cards ul {
@@ -178,4 +179,16 @@ area.cards ul li{
 .area table td {
     padding: 15px;
     vertical-align: middle;
+}
+
+
+.add button {
+    background-color: rgb(7, 179, 156);
+    color: rgb(255, 255, 255);
+    border: 0px;
+    border-radius: 2px;
+    margin: 15px 0px 0px 40px;
+}
+.add button a {
+    color: rgb(255, 255, 255);
 }
