--- a/css/add.css
+++ b/css/add.css
@@ -33,6 +33,7 @@ input[type="text"] {
     height: 40px;
     border: 0px;
     width: 300px;
+    font-size: 19px;
 }
 
 input[type="text"]:focus{
@@ -44,4 +45,17 @@ input.discription{
     padding: 30px;
     height: 150px;
     width: 100%;
+}
+
+.txt{
+    padding: 10px;
+    vertical-align: top;
+    border: 0px;
+    border-radius: 3px;
+    height: 200px;
+    width: 50%;
+    font-size: 19px;
+}
+.txt:focus{
+outline: none;
 }
