--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@ a{
 .navbar span i{
     padding-right: 25px;
 }
-/* 
-input[type="text"] {
+
+.navbar input[type="text"] {
     padding: 10px;
     width: 350px;
     border-radius: 20px 20px 20px 20px;
@@ -40,7 +40,7 @@ input[type="text"] {
 
 input[type="text"]:focus{
     outline: none;
-} */
+}
 
 
 .admin{
@@ -54,7 +54,7 @@ input[type="text"]:focus{
 
 /* SideBar Started*/
 .sidebar {
-    background-color: black;
+    background-color: rgb(0, 71, 122);
     color: white;
     width: 250px;
 }
@@ -79,7 +79,7 @@ input[type="text"]:focus{
 .sidebar ul li {
     list-style: none;
     color: white;
-    padding: 7px;
+    font-weight: 900;
 }
 
 
