--- a/registration/forgetpassword.css
+++ b/registration/forgetpassword.css
@@ -118,7 +118,4 @@ a{
       background-color: rgb(232, 235, 238);
       color: rgb(75, 79, 85);
   }
-
-  /* .hr{
-      margin-top: 10px;
-  } */
+/* 120 */
