--- a/css/add.css
+++ b/css/add.css
@@ -14,7 +14,6 @@
 form{
     padding: 20px;
     width: 100%;
-    /* background-color: #4076af; */
     border-radius: 3px;
     color: black;
 }
@@ -34,6 +33,7 @@ input[type="text"] {
     border: 0.5px solid #b0b0b0;
     width: 300px;
     font-size: 19px;
+    margin: 7px 0px;
 }
 
 input[type="text"]:focus{
@@ -56,10 +56,13 @@ input.discription{
     width: 50%;
     font-size: 19px;
     border: 0.5px solid #b0b0b0;
+    margin: 7px 0px;
 }
+
 .txt:focus{
 outline: none;
 }
+
 button {
     padding: 15px;
     margin-top: 15px;
