--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ a{
 .navbar span i{
     padding-right: 25px;
 }
+i.fa-solid.fa-magnifying-glass{
+    margin-left: -40px;
+}
 
 .navbar input[type="text"] {
     padding: 10px;
@@ -57,6 +60,11 @@ input[type="text"]:focus{
     background-color: rgb(0, 71, 122);
     color: white;
     width: 250px;
+    display: none;
+    
+}
+.sidebar.open{
+    display: block;
 }
 .sidebar ul li:hover {
     background: rgb(235, 239, 249);
