--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,27 @@
 /* NavBar Started */
 .navbar {
     background-color: white;
-    padding: 13px;
+    padding: 6px;
     display: flex;
     align-items: center;
 }
+
+.navbar a {
+    color: black;
+    font-weight: 900;
+}
+
+.change .navbar {
+    background-color: black;
+    color: white;
+}
+.change .navbar a{
+    color: white;
+}
+.change .sidebar{
+    background-color: black;
+}
+
 a{
     padding-right: 25px;
     text-decoration: none;
@@ -202,3 +219,75 @@ input[type="text"]:focus{
 }
 
 /*194*/
+
+.add_form{
+    min-height: 100vh;
+    width: 93%;
+    margin: 30px auto;
+}
+
+
+form{
+    padding: 20px;
+    width: 100%;
+    border-radius: 3px;
+    color: black;
+}
+
+
+form span {
+    width: 100%;
+    height: 100%;
+    font-size: 19px;
+}
+
+input[type="text"] {
+    padding: 7px;
+    display: table;
+    border-radius: 3px;
+    height: 40px;
+    border: 0.5px solid #b0b0b0;
+    width: 300px;
+    font-size: 19px;
+    margin: 7px 0px;
+}
+
+input[type="text"]:focus{
+    outline: none;
+}
+
+
+input.discription{
+    padding: 30px;
+    height: 150px;
+    width: 100%;
+}
+
+.txt{
+    padding: 10px;
+    vertical-align: top;
+    border: 0px;
+    border-radius: 3px;
+    height: 200px;
+    width: 50%;
+    font-size: 19px;
+    border: 0.5px solid #b0b0b0;
+    margin: 7px 0px;
+}
+
+.txt:focus{
+outline: none;
+}
+
+button {
+    padding: 15px;
+    margin-top: 15px;
+    /* width: 120px; */
+    color: white;
+    background-color: rgb(7, 179, 156);
+    border: 0px;
+    font-size: 19px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+/*72*/
