--- a/css/style.css
+++ b/css/style.css
@@ -219,11 +219,15 @@ input[type="text"]:focus{
     background-color: rgb(7, 179, 156);
     color: rgb(255, 255, 255);
     border: 0px;
+    display: flex;
+    height: 50px;
     border-radius: 2px;
     margin: 15px 0px 0px 40px;
+    align-items: center;
 }
 .add button a {
     color: rgb(255, 255, 255);
+    display: inline-block;
 }
 
 /*194*/
